<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/account_icon"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_track_order"
            android:icon="@drawable/ic_baseline_push_pin_24"
            android:title="@string/track_order" />
        <item
            android:id="@+id/nav_customer_care"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/customer_care" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>