<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/fragmentHomeScreen"
            android:icon="@drawable/home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/fragmentAccount"
            android:icon="@drawable/account_icon"
            android:title="@string/account" />
        <item
            android:id="@+id/viewCartActivity"
            android:icon="@drawable/ic_baseline_shopping_cart"
            android:title="@string/view_cart" />

        <item
            android:id="@+id/trackOrder"
            android:icon="@drawable/truck_icon"
            android:title="Track Order" />
        <item
            android:id="@+id/fragmentCustomerCare"
            android:icon="@drawable/receipt_icon"
            android:title="@string/transaction_history" />

        <item
            android:id="@+id/theme"
            android:title="Theme"
            android:icon="@drawable/display_theme"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout" />

    </group>
</menu>