<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
                android:id="@+id/textView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:fontFamily="@font/gilroy_bold"
                android:paddingTop="5dp"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="10sp"
                android:text="@string/store"
                android:textColor="@color/black_alt"
                android:textSize="13sp" />

        <TextView
                android:id="@+id/itemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/product_name"
                android:textColor="@color/black_alt"
                android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_medium"
                android:text="x"
                android:textColor="@color/black_alt"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/itemQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_medium"
                android:paddingLeft="2dp"
                android:text="0"
                android:textColor="@color/black_alt"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/itemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/final_price"
                android:textAlignment="textEnd"
                android:textColor="@color/black_alt"
                android:textSize="15sp" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/light_gray"/>

        <TextView
            android:id="@+id/sellerStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/status"
            android:lines="1"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="9sp"
            android:textAlignment="textEnd"
            android:textColor="@color/green_admin"
            android:textSize="12sp"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/line"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/light_gray" />


    </LinearLayout>

</RelativeLayout>