<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dim_white"
    tools:context=".UserHomeScreen.EditAccountDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="80dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView3"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_image"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/Rounded"
                    app:strokeColor="@color/green_admin"
                    app:strokeWidth="4dp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnChooseAccntPhoto"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/select_photo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView3"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/imageView3"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:textAlignment="center"
                android:fontFamily="@font/gilroy_medium"
                android:text="Choose Profile Photo"
                android:textColor="@color/black_alt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/gilroy_bold"
                android:text="Personal Information"
                android:textColor="@color/black_alt"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/username"
                android:textColor="@color/black_alt"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editUsername"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingEnd="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/dialog_bg"
                android:editable="false"
                android:textColor="@color/black_alt"
                android:ems="10"
                android:inputType="none"
                android:paddingLeft="15dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black_alt"
                android:textSize="12sp"
                android:text="@string/full_name"/>

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/dialog_bg"
                android:ems="10"
                android:hint="@string/full_name"
                android:textColorHint="@color/gray"
                android:textColor="@color/black_alt"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/email"
                android:textColor="@color/black_alt"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/dialog_bg"
                android:ems="10"
                android:hint="@string/email"
                android:textColorHint="@color/gray"
                android:textColor="@color/black_alt"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/contact_num"
                android:textColor="@color/black_alt"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editContact"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/contact_num"
                android:textColorHint="@color/gray"
                android:textColor="@color/black_alt"
                android:background="@drawable/dialog_bg"
                android:ems="10"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/barangay"
                android:textColor="@color/black_alt"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/brgySelection"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/dialog_bg"
                android:ems="10"
                android:textSize="16sp"
                android:paddingEnd="15dp"
                android:spinnerMode="dialog"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/landmark_sitio_purok"
                android:textColor="@color/black_alt"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editSitio"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/dialog_bg"
                android:ems="10"
                android:hint="@string/landmark_sitio_purok"
                android:textColorHint="@color/gray"
                android:textColor="@color/black_alt"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/street_if_applicable"
                android:textColor="@color/black_alt"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editStreet"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/dialog_bg"
                android:ems="10"
                android:hint="@string/street_if_applicable"
                android:textColorHint="@color/gray"
                android:textColor="@color/black_alt"
                android:inputType="textPersonName"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:textSize="15sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/change_pass"
                android:textColor="@color/black_alt"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnChangepasword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/dialog_bg"
                android:text="**********"
                android:paddingStart="15dp"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/black_alt"
                android:textSize="15sp"
                android:onClick="changePasswordBuyer"/>

            <LinearLayout
                android:layout_marginTop="40dp"
                android:layout_marginBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnUpdateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_btn"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/update"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/title_white"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnClearFieldsBuyer"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="40dp"
                    android:backgroundTint="@color/red"
                    android:background="@drawable/bg_btn"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/clear"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/title_white"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:adjustViewBounds="true"
        android:background="@drawable/topbar_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/main_green"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/arrow_92_256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/gilroy_bold"
        android:text="Edit Profile"
        android:textAlignment="center"
        android:textColor="@color/title_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>